[gd_scene load_steps=9 format=3 uid="uid://bafnn8wh0gvow"]

[ext_resource type="Script" path="res://scenes/enemies/crawler/crawler.gd" id="1_eir77"]
[ext_resource type="Texture2D" uid="uid://0qskh0n3mqh8" path="res://assets/visuals/sprites/enemies/crawler/crawler_dead.png" id="2_1l1he"]
[ext_resource type="Texture2D" uid="uid://eeyq5xfxe6oo" path="res://assets/visuals/sprites/enemies/crawler/crawler_walking_1.png" id="2_d0p88"]
[ext_resource type="Texture2D" uid="uid://bqbwooybvi5ky" path="res://assets/visuals/sprites/enemies/crawler/crawler_walking_2.png" id="3_drisk"]
[ext_resource type="Texture2D" uid="uid://dk34qfs4x8psu" path="res://assets/visuals/sprites/enemies/crawler/crawler_walking_3.png" id="4_6dt8w"]
[ext_resource type="AudioStream" uid="uid://ctrjxj8ktn0o" path="res://assets/sounds/sfx/enemies/crawler/crawler_hurt.wav" id="6_r1h3s"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jlkgx"]
size = Vector2(8, 9)

[sub_resource type="SpriteFrames" id="SpriteFrames_u3bg0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_1l1he")
}],
"loop": true,
"name": &"dead",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_d0p88")
}, {
"duration": 1.0,
"texture": ExtResource("3_drisk")
}, {
"duration": 1.0,
"texture": ExtResource("4_6dt8w")
}],
"loop": true,
"name": &"walking",
"speed": 5.0
}]

[node name="Crawler" type="Node2D"]
script = ExtResource("1_eir77")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 3.5)
shape = SubResource("RectangleShape2D_jlkgx")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(2.38419e-07, 3.5)
scale = Vector2(0.5, 0.45)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_u3bg0")
animation = &"dead"
autoplay = "walking"

[node name="Dead_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_r1h3s")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
